.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:14:47 **** Incremental Build of configuration Debug for project 05EjercicioClase5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase5.o "..\\EjercicioClase5.c" 
gcc -o 05EjercicioClase5.exe EjercicioClase5.o 
Info: Nothing to build for 04EjercicioClase4
Info: Nothing to build for 05EjercicioClase5
Info: Nothing to build for 04EjercicioClase4
Info: Nothing to build for 05EjercicioClase5
Info: Nothing to build for 05EjercicioClase5
Info: Nothing to build for 05EjercicioClase5
11:24:50 **** Incremental Build of configuration Debug for project 05EjercicioClase5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase5.o "..\\EjercicioClase5.c" 
..\EjercicioClase5.c: In function 'main':
..\EjercicioClase5.c:39:7: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
   ptr = (int) malloc(64 * sizeof(int));
       ^
gcc -o 05EjercicioClase5.exe EjercicioClase5.o 
Info: Nothing to build for 05EjercicioClase5
11:28:33 **** Incremental Build of configuration Debug for project 05EjercicioClase5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase5.o "..\\EjercicioClase5.c" 
gcc -o 05EjercicioClase5.exe EjercicioClase5.o 
11:33:58 **** Incremental Build of configuration Debug for project 05EjercicioClase5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase5.o "..\\EjercicioClase5.c" 
gcc -o 05EjercicioClase5.exe EjercicioClase5.o 
11:36:19 **** Incremental Build of configuration Debug for project 05EjercicioClase5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase5.o "..\\EjercicioClase5.c" 
..\EjercicioClase5.c: In function 'main':
..\EjercicioClase5.c:45:29: warning: format '%p' expects argument of type 'void *', but argument 2 has type 'int' [-Wformat=]
   printf("myIntPointer[9]: %p\n", myIntPointer[9]);
                             ^
gcc -o 05EjercicioClase5.exe EjercicioClase5.o 
11:40:45 **** Incremental Build of configuration Debug for project 05EjercicioClase5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase5.o "..\\EjercicioClase5.c" 
..\EjercicioClase5.c: In function 'main':
..\EjercicioClase5.c:40:29: error: expected expression before 'int'
   myIntPointer = calloc(64, int);
                             ^~~
..\EjercicioClase5.c:47:29: warning: format '%p' expects argument of type 'void *', but argument 2 has type 'int' [-Wformat=]
   printf("myIntPointer[9]: %p\n", myIntPointer[9]);
                             ^
..\EjercicioClase5.c:49:29: error: expected expression before 'int'
   myIntPointer = calloc(64, int);
                             ^~~
11:41:51 **** Incremental Build of configuration Debug for project 05EjercicioClase5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase5.o "..\\EjercicioClase5.c" 
..\EjercicioClase5.c: In function 'main':
..\EjercicioClase5.c:47:29: warning: format '%p' expects argument of type 'void *', but argument 2 has type 'int' [-Wformat=]
   printf("myIntPointer[9]: %p\n", myIntPointer[9]);
                             ^
..\EjercicioClase5.c:36:7: warning: unused variable 'myIntPointer' [-Wunused-variable]
  int* myIntPointer; // apuntador enteros ptr, inicialmente nulo
       ^~~~~~~~~~~~
gcc -o 05EjercicioClase5.exe EjercicioClase5.o 
11:45:34 **** Incremental Build of configuration Debug for project 05EjercicioClase5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase5.o "..\\EjercicioClase5.c" 
..\EjercicioClase5.c: In function 'main':
..\EjercicioClase5.c:36:7: warning: unused variable 'myIntPointer' [-Wunused-variable]
  int* myIntPointer; // apuntador enteros ptr, inicialmente nulo
       ^~~~~~~~~~~~
gcc -o 05EjercicioClase5.exe EjercicioClase5.o 
11:47:25 **** Incremental Build of configuration Debug for project 05EjercicioClase5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase5.o "..\\EjercicioClase5.c" 
..\EjercicioClase5.c: In function 'main':
..\EjercicioClase5.c:36:7: warning: unused variable 'myIntPointer' [-Wunused-variable]
  int* myIntPointer; // apuntador enteros ptr, inicialmente nulo
       ^~~~~~~~~~~~
gcc -o 05EjercicioClase5.exe EjercicioClase5.o 
11:50:12 **** Incremental Build of configuration Debug for project 05EjercicioClase5 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase5.o "..\\EjercicioClase5.c" 
..\EjercicioClase5.c: In function 'main':
..\EjercicioClase5.c:36:7: warning: unused variable 'myIntPointer' [-Wunused-variable]
  int* myIntPointer; // apuntador enteros ptr, inicialmente nulo
       ^~~~~~~~~~~~
gcc -o 05EjercicioClase5.exe EjercicioClase5.o 
